--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,2 +1,56 @@
 index.Featured.Product=Featured product
 index.Featured.Text=We present a dedicated section highlighting a featured product for an enhanced e-commerce experience.
+template.titulo=Juan D's Shop
+template.home=Home
+template.product.titulo.1=Flashlight
+template.product.desc.1=Flashlight with a very effective and bright focus with rechargeable and long-lasting batteries
+template.product.vistas.1=Reviews(24)
+template.product.titulo.2=Dostov Clock
+template.product.desc.2=High quality watch and resistant to falls and shocks, it has an insurance to prevent falls
+template.product.vistas.2=Reviews(48)
+template.product.titulo.3=Koyoj Camera
+template.product.desc.3=Old camera but with good quality photos for its time, it has a resistant lens
+template.product.vistas.3=Reviews(74)
+template.productos=Products
+template.producto.extra.4=Microphone
+template.producto.extra.5=Headphones
+template.producto.extra.6=Speakers
+template.producto.extra.7=Monitor
+template.informacion=More Info
+template.info.dato.2=About Us
+template.info.dato.3=Locations
+template.info.dato.5=Contact Us
+template.info.email=Email Address
+template.info.boton=Join
+
+index.tabla.desc=Description
+index.tabla.prec=Price
+index.tabla.img=Image
+
+admin.categorias=Categories
+admin.facturas=Invoices
+admin.usuarios=Users
+
+categoria.crear=Create New Category
+categoria.edit=Edit
+categoria.borrar=Delete
+categoria=Category
+categoria.url=URL image
+categoria.cerrar=Close
+categoria.guardar=Save Changes
+
+producto.preciobajo=Lower Price
+producto.precioalto=Highest Price
+producto.buscar=Search
+producto.accion=Action
+producto=Product
+producto.detalle=Details
+producto.existencia=Stock
+
+user.crear=Create New User
+user=User
+user.nom=Name
+user.ap=Last Name
+user.corr=Email
+user.tel=Phone Number
+username=Username
