--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,2 +1,57 @@
 index.Featured.Product=Producto destacado
 index.Featured.Text=Presentamos una secci\u00f3n dedicada que destaca un producto destacado para una experiencia de comercio electr\u00f3nico mejorada.
+template.titulo=Tienda de Juan D
+template.home=Inicio
+template.product.titulo.1=Linterna
+template.product.desc.1=Linterna con un foco muy efectivo y brilloso con baterias recargables y de alta duraci\u00f3n
+template.product.vistas.1=Visualizaciones(24)
+template.product.titulo.2=Reloj Dostov
+template.product.desc.2=Reloj de alta calidad y resistente a caidas y golpes, cuenta con un seguro para evitar caidas
+template.product.vistas.2=Visualizaciones(48)
+template.product.titulo.3=Camara Koyoj
+template.product.desc.3=Camara antigua pero con fotos en buena calidada para su epoca, cuenta con un lente resistente
+template.product.vistas.3=Visualizaciones(74)
+template.productos=Productos
+template.producto.extra.4=Microfono
+template.producto.extra.5=Audifonos
+template.producto.extra.6=Parlantes
+template.producto.extra.7=Monitor
+template.informacion=Mas Informacion
+template.info.dato.2=Sobre nosotros
+template.info.dato.3=Ubicaciones
+template.info.dato.5=Contactanos
+template.info.email=Direccion de Email
+template.info.boton=Unirse
+
+index.tabla.desc=Descripci\u00f3n
+index.tabla.prec=Precio
+index.tabla.img=Imagen
+
+admin.categorias=Categorias
+admin.facturas=Facturas
+admin.usuarios=Usuarios
+
+categoria.crear=Crear nueva categoria
+categoria.edit=Editar
+categoria.borrar=Eliminar
+categoria=Categoria
+categoria.url=URL de imagen
+categoria.cerrar=Cerrar
+categoria.guardar=Guardar Cambios
+
+producto.preciobajo=Precio Bajo
+producto.precioalto=Precio Alto
+producto.buscar=Buscar
+producto.accion=Acci\u00f3n
+producto=Producto
+producto.detalle=Detalles
+producto.existencia=Existencias
+
+user.crear=Crear nuevo usuario
+user=Usuario
+user.nom=Nombre
+user.ap=Apellido
+user.corr=Correo
+user.tel=Telefono
+username=Nombre de usuario
+
