--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -54,3 +54,12 @@ user.ap=Apellido
 user.corr=Correo
 user.tel=Telefono
 username=Nombre de usuario
+
+lenguaje.es=Espa\u00f1ol
+lenguaje.en=Ingles
+
+accion.regresar=Regresar
+usuario.agregar=Agregar
+usuario.activacion=Activar
+usuario.password=Contrase\u00f1a
+registro.recordar.us=Recuerdame
