--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -54,3 +54,12 @@ user.ap=Last Name
 user.corr=Email
 user.tel=Phone Number
 username=Username
+
+lenguaje.es=Spanish
+lenguaje.en=English
+
+accion.regresar=Go Back
+usuario.agregar=Add
+usuario.activacion=Activate
+usuario.password=Password
+registro.recordar.us=Remember me
