--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -55,3 +55,11 @@ user.corr=Correo
 user.tel=Telefono
 username=Nombre de usuario
 
+lenguaje.es=Espa\u00f1ol
+lenguaje.en=Ingles
+
+accion.regresar=Regresar
+usuario.agregar=Agregar
+usuario.activacion=Activar
+usuario.password=Contrase\u00f1a
+registro.recordar.us=Recuerdame
