--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -63,3 +63,6 @@ usuario.agregar=Add
 usuario.activacion=Activate
 usuario.password=Password
 registro.recordar.us=Remember me
+
+inisec=Log In
+regis=Sign Up
