--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -63,3 +63,6 @@ usuario.agregar=Agregar
 usuario.activacion=Activar
 usuario.password=Contrase\u00f1a
 registro.recordar.us=Recuerdame
+
+inisec=Inicio Sesion
+regis=Registro
